2007-05-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* Makefile.am (alpha): Change distdir format
	* examples/mimetest.c: Print more information about the message
	structure.
	* mailbox/mime.c (_mime_parse_mpart_message): One more fix
	* mailbox/testsuite/Mime: Fix to match new mimetest output and
	bugfixes in mime.c
	* imap4d/testsuite/imap4d/fetch.exp, mail/testsuite/mail/read.exp,
	mail/testsuite/mail/write.exp,
	readmsg/testsuite/readmsg/test.exp: Update to match bugfixes in
	mime.c  
	* testsuite/spool/mbox1: Fix msg#5
	
2007-05-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/daemon.c (mu_daemon_remove_pidfile): Reset pidfile.

2007-04-30  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac (MU_BUILT_CXX_EXAMPLES): Define if c++ libs
	requested.
	* examples/cpp/Makefile.am: Build c++ examples
	* libmu_cpp/Makefile.am (libmu_cpp_la_LDFLAGS): Add -rpath

2007-04-30  Wojciech Polak

	* libproto/pop/mbox.c: Fixed APOP handling.

2007-04-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/header.c (mu_header_get_value): Bugfix
	* mailbox/mbx_default.c (mu_mailbox_create_default): Fix memory
	leaks.

2007-03-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	* pop3d/bulletin.c (read_bulletin_db): Do not close DB too early.

2007-03-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	* imap4d/testsuite/imap4d/expunge.exp: Fix pattern
	* include/mailutils/assoc.h (mu_assoc_create): Add third argument.
	(mu_assoc_destroy,mu_assoc_clear): New functions
	* include/mailutils/header.h (mu_header_set_get_fvalue): Remove
	function.
	* libproto/imap/mbox.c (imap_header_get_fvalue): Remove
	* libproto/include/header0.h (struct _mu_header): Remove
	`fhdr_count' and `fhdr', add `cache'.
	Remove `_get_fvalue'
	* libproto/mbox/mbox.c: Remove rudimentary header caching
	* libproto/mbox/mbox0.h: Likewise
	* libproto/mbox/mboxscan.c: Likewise
	* mail/alias.c, mailbox/mutil.c: Update calls to mu_assoc_create
	* mailbox/assoc.c (mu_assoc_create): Take 3 arguments